--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <div class="time-container">
-    <h6>Date/Time:</h6>
-    <span class="date"></span><br>
-    <span class="time"></span><br>
+    <span class="dateTime">Date/Time:</span>
+    <span class="date"></span> | 
+    <span class="time"></span> |
     <span class="milTime"></span>
   </div>
   <header>
@@ -27,30 +27,50 @@
  
   <div class="links">
     <ul>
-      <li><a href="#">Can-I-Use</a></li>
-      <li><a href="#"></a>Mozzilla Dev Network</li>
-      <li><a href="#">Github</a></li>
+      <li><a href="https://caniuse.com/">Can-I-Use</a></li>
+      <li><a href="https://developer.mozilla.org/en-US/"></a>Mozzilla Dev Network</li>
+      <li><a href="https://github.com/">Github</a></li>
     </ul>
 
     <ul>
-      <li><a href="#">CSS-Tricks</a></li>
+      <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
     </ul>
 
     <ul>
-      <li><a href="#">Vue</a></li>
-      <li><a href="#">React</a></li>
-      <li><a href="#">jQuery</a></li>
-      <li><a href="#">NodeJS</a></li>
-      <li><a href="#">Express</a></li>
+      <li><a href="https://vuejs.org/">Vue</a></li>
+      <li><a href="https://reactjs.org/">React</a></li>
+      <li><a href="https://jquery.com/">jQuery</a></li>
+      <li><a href="https://nodejs.org/en/">NodeJS</a></li>
+      <li><a href="https://expressjs.com/">Express</a></li>
     </ul>
   </div>
 
   <div class="notes">
-    notes
+    <div class="noteLeft">
+      <form action="#" method="post">
+        <label for="title">Title:</label>
+        <input type="text" placeholder="New Note" class="newNoteTitle"><br>
+        <textarea name="Note" id="" cols="30" rows="10"></textarea><br>
+        <button class="noteBtn">Add Note</button>
+
+      </form>
+    </div>
+    <div class="noteRight">
+
+    </div>
   </div>
 
   <div class="weather">
-weather
+    <div class="current">
+      <span class="temp"></span>
+      <span class="wind"></span>
+      <span class="rain"></span>
+    </div>
+    <div class="forecast">
+      
+
+    </div>
+
 
   </div>
 
