updates on weatehr

--- a/src/index.html
+++ b/src/index.html
@@ -61,14 +61,15 @@
   </div>
 
   <div class="weather">
-    <div class="current">
-      <span class="temp"></span>
-      <span class="wind"></span>
-      <span class="rain"></span>
+    <div class="current card">
+      <span class="cTemp"></span><br>
+      <span class="cWind"></span><br>
+      <span class="cRain"></span>
     </div>
     <div class="forecast">
-      
+      <div class="card">
 
+      </div>
     </div>
 
 
@@ -76,4 +77,4 @@
 
   <script src="js/script.js"></script>
 </body>
-</html> 
+</html>
