--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <title>New Tab</title>
 
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Bungee|Fira+Mono|Libre+Barcode+39+Extended+Text" rel="stylesheet"> 
+
 </head>
 <body>
   <div class="time-container">
@@ -61,14 +60,17 @@
   </div>
 
   <div class="weather">
-    <div class="current card">
+    <!-- <div class="current card">
+      <h5>Today:</h5>
       <span class="cTemp"></span><br>
       <span class="cWind"></span><br>
       <span class="cRain"></span>
-    </div>
-    <div class="forecast">
-      <div class="card">
+    </div> -->
 
+    <div class="forecast">
+      forecast
+      <div class="fcard">
+        fcard
       </div>
     </div>
 
