fix gulp min-js problem. minify es6

--- a/src/index.html
+++ b/src/index.html
@@ -26,55 +26,22 @@
  
   <div class="links">
     <ul>
-      <li><a href="https://caniuse.com/">Can-I-Use</a></li>
-      <li><a href="https://developer.mozilla.org/en-US/"></a>Mozzilla Dev Network</li>
-      <li><a href="https://github.com/">Github</a></li>
+      <li><a href="https://caniuse.com/" target="_blank">Can-I-Use</a></li>
+      <li><a href="https://developer.mozilla.org/en-US/" target="_blank"></a>Mozzilla Dev Network</li>
+      <li><a href="https://github.com/" target="_blank">Github</a></li>
     </ul>
 
     <ul>
-      <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
+      <li><a href="https://css-tricks.com/" target="_blank">CSS-Tricks</a></li>
     </ul>
 
     <ul>
-      <li><a href="https://vuejs.org/">Vue</a></li>
-      <li><a href="https://reactjs.org/">React</a></li>
-      <li><a href="https://jquery.com/">jQuery</a></li>
-      <li><a href="https://nodejs.org/en/">NodeJS</a></li>
-      <li><a href="https://expressjs.com/">Express</a></li>
+      <li><a href="https://vuejs.org/" target="_blank">Vue</a></li>
+      <li><a href="https://reactjs.org/" target="_blank">React</a></li>
+      <li><a href="https://jquery.com/" target="_blank">jQuery</a></li>
+      <li><a href="https://nodejs.org/en/" target="_blank">NodeJS</a></li>
+      <li><a href="https://expressjs.com/" target="_blank">Express</a></li>
     </ul>
-  </div>
-
-  <div class="notes">
-    <div class="noteLeft">
-      <form action="#" method="post">
-        <label for="title">Title:</label>
-        <input type="text" placeholder="New Note" class="newNoteTitle"><br>
-        <textarea name="Note" id="" cols="30" rows="10"></textarea><br>
-        <button class="noteBtn">Add Note</button>
-
-      </form>
-    </div>
-    <div class="noteRight">
-
-    </div>
-  </div>
-
-  <div class="weather">
-    <!-- <div class="current card">
-      <h5>Today:</h5>
-      <span class="cTemp"></span><br>
-      <span class="cWind"></span><br>
-      <span class="cRain"></span>
-    </div> -->
-
-    <div class="forecast">
-      forecast
-      <div class="fcard">
-        fcard
-      </div>
-    </div>
-
-
   </div>
 
   <script src="js/script.js"></script>
