--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
     </ul>
   </div>
 
+  <button class="btn">Click me</button>
+  <input type="text" class="res">
+
   <script src="js/script.js"></script>
 </body>
 </html>
